syntax = "proto3";

package protocol;

enum ServerType {
    Frontend = 0;
    Router = 1;
    Chat = 2;
    Game = 3;

    SIZE = 4;
}

message ServerInfo {
    string ip = 1;
    int32 port = 2;
}

message FetchConfigRequest {
    ServerType server_type = 1;
}

message FetchConfigResponse {
    bytes config = 1;
}

message FetchServerRequest {
    ServerType server_type = 1;
}

message FetchServerResponse {
    ServerType server_type = 1;
    ServerInfo server_info = 2;
}

message ServerAnnouncement {
    ServerType server_type = 1;
    ServerInfo server_info = 2;
}